# lorcana-engine

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  codecov.yml  lefthook.yml  rustfmt.toml
.github/workflows/: ci.yml  pages.yml
.playwright-mcp/: page-2026-06-03T09-37-31-628Z.yml  page-2026-06-03T09-40-20-577Z.yml
cards/: README.md  examples.toml  set1_sample.toml
cards/1/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  (+164 more)
cards/10/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  (+164 more)
cards/11/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  (+164 more)
cards/12/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  (+164 more)
cards/2/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  (+164 more)
cards/3/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  (+164 more)
cards/4/: 1.toml  10.toml  100.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  135.toml  (+161 more)
cards/5/: 1.toml  10.toml  100.toml  101.toml  102.toml  103.toml  104.toml  105.toml  106.toml  107.toml  108.toml  109.toml  11.toml  110.toml  111.toml  112.toml  113.toml  114.toml  115.toml  116.toml  117.toml  118.toml  119.toml  12.toml  120.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  127.toml  128.toml  129.toml  13.toml  (+169 more)
coverage/: tarpaulin-report.html
crates/lorcana-wasm/: Cargo.toml
crates/lorcana-wasm/src/: lib.rs
decks/: set01-amber-amethyst.txt  set01-emerald-ruby.txt  set01-sapphire-steel.txt  set02-amber-sapphire.txt  set02-amethyst-steel.txt  set03-amber-emerald.txt  set03-ruby-sapphire.txt  set04-amber-amethyst.txt  set04-sapphire-steel.txt  set05-amethyst-ruby.txt  set05-emerald-steel.txt  set06-amber-ruby.txt  set06-emerald-sapphire.txt  set07-amethyst-steel.txt  set07-ruby-sapphire.txt  set08-amber-amethyst.txt  set08-ruby-steel.txt  set09-amber-sapphire.txt  set09-emerald-ruby.txt  set10-amber-emerald.txt  set10-sapphire-steel.txt
docs/: README.md  REMINDERS.md
scripts/: build-wasm.sh
src/: lib.rs  main.rs
tests/: actions.rs  activated_abilities.rs  all_sets_load.rs  api.rs  audit_log.rs  authored_cards.rs  card_loader.rs  challenge.rs  cli_demo.rs  conformance.rs  deck.rs  determinism.rs  dsl_reference.rs  dsl_selectors.rs  granted.rs  items.rs  keywords.rs  locations.rs  modifiers.rs  multiplayer.rs  official_decks.rs  opponent_discard.rs  play_and_quest.rs  play_from_decks.rs  real_cards.rs  restrictions.rs  reveal.rs  self_play.rs  self_play_official.rs  serialization.rs  shift.rs  support.rs  targeted_effects.rs  triggers.rs  turn_flow.rs  turn_triggers.rs  win_loss_modifiers.rs
web/: .gitignore  .prettierignore  .stylelintrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+1109 files in other folders)
