[package]
name = "lorcana-engine"
version = "0.1.0"
edition = "2024"
description = "A game engine for the Lorcana trading card game"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bjornvanacker/lorcana-engine"
readme = "README.md"
keywords = ["lorcana", "game", "engine", "trading-card-game"]
categories = ["game-development"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rhai = "1.18"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
dead_code = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
