[workspace]
# The engine (this root package) plus the WebAssembly bindings consumed by the
# web UI. Future members (e.g. an `lorcana-ai` crate for self-play/training) slot
# in here against the same core.
members = ["crates/lorcana-wasm"]
# Keep the engine the default target of bare `cargo build/test/clippy` at the
# root, so the existing engine workflow (and CI commands in AGENTS.md) is
# unchanged. The WASM crate is built explicitly via `wasm-pack` / `-p`.
default-members = ["."]

[package]
name = "lorcana-engine"
version = "0.1.0"
edition = "2024"
description = "A game engine for the Lorcana trading card game"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bjornvanacker/lorcana-engine"
readme = "README.md"
keywords = ["lorcana", "game", "engine", "trading-card-game"]
categories = ["game-development"]

[features]
# Behaviour audit logging (named transcripts pairing a card's printed text with
# the events it produced). Off by default — not compiled into release builds;
# enable for debugging/testing: `cargo test --features audit-log`.
audit-log = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"

# The engine inherits the shared workspace lint config below, so every crate in
# the workspace (engine + WASM bindings) is held to the same strict standard.
[lints]
workspace = true

[workspace.lints.rust]
dead_code = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
