[package]
name = "lorcana-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Lorcana engine, consumed by the web UI"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lorcana-engine = { path = "../.." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
console_error_panic_hook = "0.1"
include_dir = "0.7"
# Enable `uuid`'s JS randomness source (pulled in transitively via the engine's
# v4 ids) so id generation works under `wasm32-unknown-unknown`. Feature unifies
# across the workspace onto the engine's `uuid`.
uuid = { version = "1", features = ["js", "v4"] }
# `getrandom` is also pulled in transitively (via the engine's `rand`); it needs
# its `js` backend on `wasm32-unknown-unknown` too.
getrandom = { version = "0.2", features = ["js"] }

# Inherit the same strict lint config as the engine (fmt + clippy
# all/pedantic/nursery/cargo), per the repo's working agreement.
[lints]
workspace = true
